--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1,8 +1,5 @@
 <input type='hidden' name='attr_character_sheet' value='Savage Worlds Tabbed v4.00.01' />
 <script type="text/worker">
-	
-	import { func } from "prop-types";
-
 	// Sheet managed at https://trello.com/b/yJHOPR22/swade-tabbed-roll20-sheet and the Roll20 QA test game
 	
 	// Better Logging Functionality
@@ -775,10 +772,10 @@
 	
 			getAttrs(['academics_skillmod'], function(v) {
 				setattrs({
-					academicsskillmod: academics_skillmod
-				})
+					academicsskillmod: v.academics_skillmod
+				});
 			});
-
+	
 			getAttrs(['showFiMod', 'fiwilddie', 'fiwilddieinfo', 'fiModType'], function(v){
 				setattrs({
 					showFightingRollMod: v.showFiMod,
@@ -2888,8 +2885,8 @@
 		});
 	});
 	
-	const weaponsskillnamelist = ["fightingname","athleticsname","shootingname","throwingname"];
-	const spellskillnamelist = ["faithname","athleticsname","focusname","performancename","psionicsname","ritualname","spellcastingname","weirdsciencename"];
+	const weaponsskillnamelist = ["fightingname","athleticsname","shootingname","throwingname"]; // Considering a refactor here
+	const spellskillnamelist = ["faithname","athleticsname","focusname","performancename","psionicsname","ritualname","spellcastingname","weirdsciencename"]; // similarly could consider a refactor
 	on("change:repeating_spells:spellbutton change:repeating_weapons:weaponbutton", function(eventInfo) {
 		console.log("iii sourceAttribute: " + eventInfo.sourceAttribute + " iii");
 		let parts = eventInfo.sourceAttribute.split('_');
@@ -3128,14 +3125,14 @@
 		descStatBlock();
 	});
 	
-	const skillstatlist = ["academics","athletics","battle","boating","climbing","commonknowledge","driving","electronics","faith","fighting","focus","gambling","guts","hacking","healing","intimidation","investigation","native-language","lockpicking","notice","occult","performance","persuasion","piloting","psionics","repair","research","riding","ritual","science","shooting","spellcasting","stealth","streetwise","survival","swimming","taunt","thievery","throwing","tracking","weirdscience"];
 	const staticlist = ["staticAcademics","staticAthletics","staticBattle","staticBoating","staticClimbing","staticCommonKnowledge","staticDriving","staticElectronics","staticFaith","staticFighting","staticFocus","staticGambling","staticGuts","staticHacking","staticHealing","staticIntimidation","staticInvestigation","staticLanguage","staticLockpicking","staticNotice","staticOccult","staticPerformance","staticPersuasion","staticPiloting","staticPsionics","staticRepair","staticResearch","staticRiding","staticRitual","staticScience","staticShooting","staticSpellcasting","staticStealth","staticStreetwise","staticSurvival","staticSwimming","staticTaunt","staticThievery","staticThrowing","staticTracking","staticWeirdScience"]
 	const skillsStatBlock = function() {
-		console.log("skilllist length: "+skillstatlist.length+" staticlist length: "+staticlist.length);
+		console.log("skillnamelist length: "+skillnamelist.length+" staticlist length: "+staticlist.length);
 		getAttrs(staticlist, function(v) {
 			let charskills = '';
 			for(let i = 0; i < staticlist.length; i++) {
 				//cycle through the array
+				/* Commenting out following chunk of JS because I believe the refactor has obviated its need
 				if (staticlist[i] === "staticFighting" || staticlist[i] === "staticAcademics" || staticlist[i] === "staticCommonKnowledge" || staticlist[i] === "staticLanguage") {
 					switch(staticlist[i]) {
 						case 'staticFighting':
@@ -3183,8 +3180,9 @@
 						default:
 							console.log("Nothing to report");
 					}
-				}
-				else if(v[staticlist[i]] != "0") {
+				} 
+				else if(v[staticlist[i]] != "0") { /* */
+				if(v[staticlist[i]] != "0") {
 					//skill is turned on
 					let skillname = staticlist[i];
 					let uskillname = staticlist[i];
