Typos and Fixes
Minor fix ups

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -733,7 +733,7 @@
 			});
 			getAttrs(['common-knowledgename'], function(v) { // have to actually do this in case people have a custom name for Common Knowledge
 				setattrs({
-					commonknowledgename: v.common-knowledgename
+					commonknowledgename: v['common-knowledgename']
 				});
 			});
 			getAttrs(['linkedritualattscore', 'linkedritualattscorebutton', 'linkedritualattscoreformula', 'linkedspellcastingattscore', 'linkedspellcastingattscorebutton', 'linkedspellcastingattscoreformula', 'linkedweirdscienceattscore', 'linkedweirdscienceattscorebutton', 'linkedweirdscienceattscoreformula', ], function(v) {
@@ -6097,7 +6097,7 @@
     					    <!-- Scholarship (formerly Academics) -->
     					    <input class='sheet-useScholarship' type='checkbox' name='attr_usescholarship' value='1' style='width: 15px; display: none;' />
     					    <div class="sheet-basederived sheet-Scholarship">
-    					        <div class="sheet-derivelabel" data-i18n="scholarship-stat">Scholarship</div>
+    					        <div class="sheet-derivelabel" data-i18n="scholarship">Scholarship</div>
     					        <div class="sheet-derivebase"><input type="number" name="attr_scholarship" class="sheet-derivedStat" title="@{scholarship}" value="0"/></div>
     							<div class="sheet-derivemod"><input type="number" name="attr_scholarshipMod" class="sheet-derivedStat" title="@{scholarshipMod}" value="0"/></div>
     							<div class="sheet-derivecurrent"><input type="number" name="attr_scholarshipCur" title="@{scholarshipCur}" class="sheet-derivedStat" readonly /></div>
@@ -8327,7 +8327,7 @@
     			    <input type="checkbox" class="sheet-hideDS" name="attr_hideDS" /><span class="sheet-showDS"></span>
     			    <h3 class='sheet-configSectionTitle' data-i18n="additional-derived-stats">Additional Derived Stats</h3>
     			    <div class="sheet-dsconfig">
-    			        <!--Scholarship (formerly Academics)--><label class="sheet-dsItem" data-i18n-title="academic-text"  title="Used to track a character's academic score. ETU uses this field."><input class='sheet-useScholarship' type='checkbox' name='attr_usescholarship' value='1' style='width: 15px;' /><span data-i18n="scholarship-stat">Scholarship</span></label>
+    			        <!--Scholarship (formerly Academics)--><label class="sheet-dsItem" data-i18n-title="academic-text"  title="Used to track a character's academic score. ETU uses this field."><input class='sheet-useScholarship' type='checkbox' name='attr_usescholarship' value='1' style='width: 15px;' /><span data-i18n="scholarship">Scholarship</span></label>
     			        <!--Corruption--><label class="sheet-dsItem" data-i18n-title="corruption-text" title="Used to track a character's corruption. Settings like Lankhmar use this field."><input type="checkbox" class="sheet-useCorruption" name="attr_Corruption" style="width: 15px;" /><span data-i18n="corruption">Corruption</span></label>
     			        <!--Fame--><label class="sheet-dsItem" data-i18n-title="fame-text" title="Used to track how famous a character is. Settings like Pirates of the Spanish Main use this field."><input type="checkbox" class="sheet-useFame" name="attr_potsmFame" style="width: 15px;" /><span data-i18n="fame">Fame</span></label>
     			        <!--Firewall--><label class="sheet-dsItem" data-i18n-title="firewall-text" title="Protects a character from being hacked. Starts at 4 and can be modified. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useFirewall" style="width: 15px;" name="attr_izFirewall" /><span data-i18n="firewall">Firewall</span></label>
@@ -8395,7 +8395,7 @@
 						<!--Battle--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="battle">Battle</label> = <input type="text" class="sheet-csnInput" name="attr_battlename" value="" /></div>
 						<!--Boating--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="boating">Boating</label> = <input type="text" class="sheet-csnInput" name="attr_boatingname" value="" /></div>
 						<!--Climbing--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="climbing">Climbing</label> = <input type="text" class="sheet-csnInput" name="attr_climbingname" value="" /></div>
-						<!--Common Knowledge--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="common-knowledge">Common Knowledge</label> = <input type="text" class="sheet-csnInput" name="attr_commonknowledge" value="" /></div>
+						<!--Common Knowledge--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="commonknowledge">Common Knowledge</label> = <input type="text" class="sheet-csnInput" name="attr_commonknowledge" value="" /></div>
 						<!--Driving--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="driving">Driving</label> = <input type="text" class="sheet-csnInput" name="attr_drivingname" value="" /></div>
 						<!--Electronics--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="electronics">Electronics</label> = <input type="text" class="sheet-csnInput" name="attr_electronicsname" value="" /></div>
 						<!--Faith--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="faith">Faith</label> = <input type="text" class="sheet-csnInput" name="attr_faithname" value="" /></div>
