--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -731,13 +731,14 @@
 				newdocumentation: "unread",
 				character_sheet: sheetVersionPrefix + sheetVersion
 			});
-			getAttrs(['common-knowledgename'], function(v) { // have to actually do this in case people have a custom name for Common Knowledge
+			getAttrs(['common-knowledgename', 'linkedritualattscore', 'linkedritualattscorebutton', 'linkedritualattscoreformula', 'linkedspellcastingattscore', 'linkedspellcastingattscorebutton', 'linkedspellcastingattscoreformula', 'linkedweirdscienceattscore', 'linkedweirdscienceattscorebutton', 'linkedweirdscienceattscoreformula', 
+			'useacademics', 'academics', 'academicsmod', 'academicsCur', 'academicsskill','academicsskill_delta','academicsskillmod','academicsskill_rank','academicsskill_display','academicsskillmod_base', 'academics_skillmod',
+			'showFiMod', 'fiwilddie', 'fiwilddieinfo', 'fiModType'], function(v) { // have to actually do this in case people have a custom name for Common Knowledge
+				acStatMod = v.academicsmod;
+				acSkillMod = v.academicsskillmod;
+				acStat = v.academics;
 				setattrs({
-					commonknowledgename: v['common-knowledgename']
-				});
-			});
-			getAttrs(['linkedritualattscore', 'linkedritualattscorebutton', 'linkedritualattscoreformula', 'linkedspellcastingattscore', 'linkedspellcastingattscorebutton', 'linkedspellcastingattscoreformula', 'linkedweirdscienceattscore', 'linkedweirdscienceattscorebutton', 'linkedweirdscienceattscoreformula', ], function(v) {
-				setattrs({
+					commonknowledgename: v['common-knowledgename'],
 					linkedritualatt: v.linkedritualattscore,
 					linkedritualattbutton: v.linkedritualattscorebutton,
 					linkedritualattformula: v.linkedritualattscoreformula,
@@ -747,37 +748,17 @@
 					linkedweirdscienceatt: v.linkedweirdscienceattscore,
 					linkedweirdscienceattbutton: v.linkedweirdscienceattscorebutton,
 					linkedweirdscienceattformula: v.linkedweirdscienceattscoreformula,
-				});
-			});
-	
-			getAttrs(['useacademics', 'academics', 'academicsmod', 'academicsCur'], function(v) {
-				setattrs({
-					scholarship: v.academics,
+					scholarship: acStat,                // handled above to avoid asynch issues
 					usescholarship: v.useacademics,
-					scholarshipmod: v.academicsmod,
-					scholarshipCur: v.academicsCur
-				});
-			});
-	
-			getAttrs(['academicsskill','academicsskill_delta','academicsskillmod','academicsskill_rank','academicsskill_display','academicsskillmod_base'], function(v) {
-				setattrs({
+					scholarshipmod: acStatMod,          // handled above to avoid asynch issues
+					scholarshipCur: v.academicsCur,
 					academics: v.academicsskill,
 					academics_delta: v.academicsskill_delta,
-					academicsmod: v.academicsskillmod,
+					academicsmod: acSkillMod,           // handled above to avoid asynch issues
 					academics_rank: v.academicsskill_rank,
 					academics_display: v.academicsskill_display,
 					academicsmod_base: v.academicsskillmod_base,
-				});
-			});
-	
-			getAttrs(['academics_skillmod'], function(v) {
-				setattrs({
-					academicsskillmod: v.academics_skillmod
-				});
-			});
-	
-			getAttrs(['showFiMod', 'fiwilddie', 'fiwilddieinfo', 'fiModType'], function(v){
-				setattrs({
+					academicsskillmod: v.academics_skillmod,
 					showFightingRollMod: v.showFiMod,
 					fightingwilddie: v.fiwilddie,
 					fightingwilddieinfo: v.fiwilddieinfo,
