Misc Modifiers not adding to knowledge/other skills
Simply added + @{traitmods} to the rolls

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -5844,7 +5844,7 @@
                 						</div>
                 						<input type='hidden' name='attr_skillnamerank_rank' value='1d4!' />
                 						<input type='hidden' name='attr_skillnamerank_display' value='1d4' />
-                						<input type='hidden' name='attr_rolltSkill' value='{{name=@{character_name} }} {{skill_rank=@{skillnamerank_display} }} {{skill_roll=[[@{skillnamerank_rank} + @{SkillMod}+ @{linkedotherattscoreformula} + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{skillnamewilddie}! + @{skillnamerankmod} + @{SkillMod} + @{linkedotherattscoreformula} + @{smooth_dice}dF]]}} {{ttmod=@{ttmod}}} {{wounds=-@{woundsMod} }} {{fatigue=-@{fatigue}}}' />
+                						<input type='hidden' name='attr_rolltSkill' value='{{name=@{character_name} }} {{skill_rank=@{skillnamerank_display} }} {{skill_roll=[[@{skillnamerank_rank} + @{SkillMod}+ @{linkedotherattscoreformula} + @{traitmods}  + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{skillnamewilddie}! + @{skillnamerankmod} + @{SkillMod} + @{linkedotherattscoreformula} + @{traitmods}  + @{smooth_dice}dF]]}} {{ttmod=@{ttmod}}} {{wounds=-@{woundsMod} }} {{fatigue=-@{fatigue}}}' />
                                     </div>
                                 </fieldset>
                             </div>
