--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -3901,7 +3901,7 @@
 								<span class="sheet-skillItem"><label class="sheet-SkillListLabel"><input class="StaticSkill" type="checkbox" name="attr_staticBattle" style='width:15px;' /><span></span> <span name="attr_battlename"></span></label></span>
 								<span class="sheet-skillItem"><label class="sheet-SkillListLabel"><input class="StaticSkill" type="checkbox" name="attr_staticBoating" style='width:15px;' /><span></span> <span name="attr_boatingname"></span></label></span>
 								<span class="sheet-skillItem"><label class="sheet-SkillListLabel"><input class="StaticSkill" type="checkbox" name="attr_staticClimbing" style='width:15px;' /><span></span> <span name="attr_climbingname"></span></label></span>
-								<span class="sheet-skillItem"><label class="sheet-SkillListLabel"><input class="StaticSkill" type="checkbox" name="attr_staticCommonKnowledge" style='width:15px;' /><span></span> <span name="attr_commonknowledge"></span></label></span>
+								<span class="sheet-skillItem"><label class="sheet-SkillListLabel"><input class="StaticSkill" type="checkbox" name="attr_staticCommonKnowledge" style='width:15px;' /><span></span> <span name="attr_commonknowledgename"></span></label></span>
 								<span class="sheet-skillItem"><label class="sheet-SkillListLabel"><input class="StaticSkill" type="checkbox" name="attr_staticDriving" style='width:15px;' /><span></span> <span name="attr_drivingname"></span></label></span>
 								<span class="sheet-skillItem"><label class="sheet-SkillListLabel"><input class="StaticSkill" type="checkbox" name="attr_staticElectronics" style='width:15px;' /><span></span> <span name="attr_electronicsname"></span></label></span>
 								<span class="sheet-skillItem"><label class="sheet-SkillListLabel"><input class="StaticSkill" type="checkbox" name="attr_staticFaith" style="width: 15px;" /><span></span> <span name="attr_faithname"></span></label></span>
@@ -4248,11 +4248,11 @@
         						    </fieldset>
         						</div>
                             </div>
-							<!-- CommonKnowledge -->
+							<!-- Common Knowledge | CommonKnowledge -->
                             <input class="sheet-StaticSkill" type="checkbox" name="attr_staticCommonKnowledge" style='display:none;'/>
                             <div class='sheet-basetrait sheet-staticCommonKnowledge'>
                                 <input class='sheet-deltabutton' type='hidden' name='attr_commonknowledge_delta' value='0' />
-                                <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tCommonKnowledgeRoll' title="@{tCommonKnowledgeRoll}" value='@{whispercommonknowledge} &{template:roll} {{trait=@{commonknowledge}}} @{rolltCommonKnowledge} @{setmods} @{showtraitmods}'> <span name="attr_commonknowledge"></span></button><span class='sheet-linkedAtt' data-i18n="sma-u">(SMA)</span>
+                                <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tCommonKnowledgeRoll' title="@{tCommonKnowledgeRoll}" value='@{whispercommonknowledge} &{template:roll} {{trait=@{commonknowledgename}}} @{rolltCommonKnowledge} @{setmods} @{showtraitmods}'> <span name="attr_commonknowledgename"></span></button><span class='sheet-linkedAtt' data-i18n="sma-u">(SMA)</span>
                                 <span class="sheet-attrankselect"><select name="attr_commonknowledge" title="@{Commonknowledge}" class="sheet-traitdie" value="4">
                                     <option value="4">d4</option>
     								<option value="6">d6</option>
@@ -8308,7 +8308,7 @@
     			    <input type="checkbox" class="sheet-hideDS" name="attr_hideDS" /><span class="sheet-showDS"></span>
     			    <h3 class='sheet-configSectionTitle' data-i18n="additional-derived-stats">Additional Derived Stats</h3>
     			    <div class="sheet-dsconfig">
-    			        <!--Scholarship (formerly Academics)--><label class="sheet-dsItem" data-i18n-title="academic-text"  title="Used to track a character's academic score. ETU uses this field."><input class='sheet-useScholarship' type='checkbox' name='attr_usescholarship' value='1' style='width: 15px;' /><span data-i18n="scholarship">Scholarship</span></label>
+    			        <!--Scholarship (formerly Academics)--><label class="sheet-dsItem" data-i18n-title="scholarship-text"  title="Used to track a character's academic score. ETU uses this field."><input class='sheet-useScholarship' type='checkbox' name='attr_usescholarship' value='1' style='width: 15px;' /><span data-i18n="scholarship">Scholarship</span></label>
     			        <!--Corruption--><label class="sheet-dsItem" data-i18n-title="corruption-text" title="Used to track a character's corruption. Settings like Lankhmar use this field."><input type="checkbox" class="sheet-useCorruption" name="attr_Corruption" style="width: 15px;" /><span data-i18n="corruption">Corruption</span></label>
     			        <!--Fame--><label class="sheet-dsItem" data-i18n-title="fame-text" title="Used to track how famous a character is. Settings like Pirates of the Spanish Main use this field."><input type="checkbox" class="sheet-useFame" name="attr_potsmFame" style="width: 15px;" /><span data-i18n="fame">Fame</span></label>
     			        <!--Firewall--><label class="sheet-dsItem" data-i18n-title="firewall-text" title="Protects a character from being hacked. Starts at 4 and can be modified. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useFirewall" style="width: 15px;" name="attr_izFirewall" /><span data-i18n="firewall">Firewall</span></label>
