Fixing bugs with attscore displays
Still hoping the academicsskill->academics is fine

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -731,28 +731,49 @@
 				newdocumentation: "unread",
 				character_sheet: sheetVersionPrefix + sheetVersion
 			});
-			getAttrs(['common-knowledgename', 'linkedritualattscore', 'linkedritualattscorebutton', 'linkedritualattscoreformula', 'linkedspellcastingattscore', 'linkedspellcastingattscorebutton', 'linkedspellcastingattscoreformula', 'linkedweirdscienceattscore', 'linkedweirdscienceattscorebutton', 'linkedweirdscienceattscoreformula', 
+			getAttrs(['common-knowledgename', 'linkedathleticsatt', 'linkedpsionicsatt',
+			'linkedritualattscore', 'linkedritualattscorebutton', 'linkedritualattscoreformula', 'linkedspellcastingattscore', 'linkedspellcastingattscorebutton', 'linkedspellcastingattscoreformula', 'linkedweirdscienceattscore', 'linkedweirdscienceattscorebutton', 'linkedweirdscienceattscoreformula', 
 			'useacademics', 'academics', 'academicsmod', 'academicsCur', 'academicsskill','academicsskill_delta','academicsskillmod','academicsskill_rank','academicsskill_display','academicsskillmod_base', 'academics_skillmod',
 			'showFiMod', 'fiwilddie', 'fiwilddieinfo', 'fiModType'], function(v) { // have to actually do this in case people have a custom name for Common Knowledge
+				function translateAttScore (attscore) {
+					switch (attscore) {
+						case '(AGL)':
+							return 'agl-u'
+						case '(SMA)':
+							return 'sma-u'
+						case '(SPI)':
+							return 'spi-u'
+						case '(STR)':
+							return 'str-u'
+						case '(VIG)':
+							return 'vig-u'
+						default:
+							return 'error'
+					}
+				};
+				
 				acStatMod = v.academicsmod;
 				acSkillMod = v.academicsskillmod;
 				acStat = v.academics;
+				acSkill = v.academicsskill
 				setattrs({
 					commonknowledgename: v['common-knowledgename'],
-					linkedritualatt: v.linkedritualattscore,
+					linkedathleticsatt: translateAttScore(v.linkedathleticsatt),
+					linkedpsionicsatt: translateAttScore(v.linkedpsionicsatt),
+					linkedritualatt: translateAttScore(v.linkedritualattscore),
 					linkedritualattbutton: v.linkedritualattscorebutton,
 					linkedritualattformula: v.linkedritualattscoreformula,
-					linkedspellcastingatt: v.linkedspellcastingattscore,
+					linkedspellcastingatt: translateAttScore(v.linkedspellcastingattscore),
 					linkedspellcastingattbutton: v.linkedspellcastingattscorebutton,
 					linkedspellcastingattformula: v.linkedspellcastingattscoreformula,
-					linkedweirdscienceatt: v.linkedweirdscienceattscore,
+					linkedweirdscienceatt: translateAttScore(v.linkedweirdscienceattscore),
 					linkedweirdscienceattbutton: v.linkedweirdscienceattscorebutton,
 					linkedweirdscienceattformula: v.linkedweirdscienceattscoreformula,
 					scholarship: acStat,                // handled above to avoid asynch issues
 					usescholarship: v.useacademics,
 					scholarshipmod: acStatMod,          // handled above to avoid asynch issues
 					scholarshipCur: v.academicsCur,
-					academics: v.academicsskill,
+					academics: acSkill,
 					academics_delta: v.academicsskill_delta,
 					academicsmod: acSkillMod,           // handled above to avoid asynch issues
 					academics_rank: v.academicsskill_rank,
@@ -4090,11 +4111,11 @@
         						<div class='sheet-basetrait sheet-traitmodplus'>
         						    <span class="sheet-ModDesc" data-i18n="linked-attribute">Linked Attribute</span>
         						    <select class="sheet-LinkedAttSelect" name="attr_linkedathleticsatt">
-        						        <option value="(AGL)" data-i18n="agility" selected >Agility</option>
-    									<option value="(SMA)" data-i18n="smarts">Smarts</option>
-    									<option value="(SPI)" data-i18n="spirit">Spirit</option>
-    									<option value="(STR)" data-i18n="strength">Strength</option>
-    									<option value="(VIG)" data-i18n="vigor">Vigor</option>
+        						        <option value="agl-u" data-i18n="agility" selected >Agility</option>
+    									<option value="sma-u" data-i18n="smarts">Smarts</option>
+    									<option value="spi-u" data-i18n="spirit">Spirit</option>
+    									<option value="str-u" data-i18n="strength">Strength</option>
+    									<option value="vig-u" data-i18n="vigor">Vigor</option>
         						    </select>
         						    <input type='hidden' name='attr_linkedathleticsattbutton' value="@{setmodsenc}" />
         						    <input type='hidden' name='attr_linkedathleticsattformula' value="@{ModSumEnc}[Distracted, Wounds, Fatigue, Encumbrance]" />
@@ -5018,11 +5039,11 @@
         						<div class='sheet-basetrait sheet-traitmodplus'>
         						    <span class="sheet-ModDesc" data-i18n="linked-attribute">Linked Attribute</span>
         						    <select class="sheet-LinkedAttSelect" name="attr_linkedpsionicsatt">
-        						        <option value="(AGL)" data-i18n="agility">Agility</option>
-    									<option value="(SMA)" data-i18n="smarts" selected >Smarts</option>
-    									<option value="(SPI)" data-i18n="spirit">Spirit</option>
-    									<option value="(STR)" data-i18n="strength">Strength</option>
-    									<option value="(VIG)" data-i18n="vigor">Vigor</option>
+        						        <option value="agl-u" data-i18n="agility">Agility</option>
+    									<option value="sma-u" data-i18n="smarts" selected >Smarts</option>
+    									<option value="spi-u" data-i18n="spirit">Spirit</option>
+    									<option value="str-u" data-i18n="strength">Strength</option>
+    									<option value="vig-u" data-i18n="vigor">Vigor</option>
         						    </select>
         						    <input type='hidden' name='attr_linkedpsionicsattbutton' value="@{setmods}" />
         						    <input type='hidden' name='attr_linkedpsionicsattformula' value="@{ModSum}[Distracted, Wounds, Fatigue]" />
@@ -5206,11 +5227,11 @@
         						<div class='sheet-basetrait sheet-traitmodplus'>
         						    <span class="sheet-ModDesc" data-i18n="linked-attribute">Linked Attribute</span>
         						    <select class="sheet-LinkedAttSelect" name="attr_LinkedRitualAtt">
-        						        <option value="(AGL)" data-i18n="agility">Agility</option>
-    									<option value="(SMA)" selected data-i18n="smarts" >Smarts</option>
-    									<option value="(SPI)" data-i18n="spirit">Spirit</option>
-    									<option value="(STR)" data-i18n="strength">Strength</option>
-    									<option value="(VIG)" data-i18n="vigor">Vigor</option>
+        						        <option value="agl-u" data-i18n="agility">Agility</option>
+    									<option value="sma-u" selected data-i18n="smarts" >Smarts</option>
+    									<option value="spi-u" data-i18n="spirit">Spirit</option>
+    									<option value="str-u" data-i18n="strength">Strength</option>
+    									<option value="vig-u" data-i18n="vigor">Vigor</option>
         						    </select>
         						    <input type="hidden" name="attr_LinkedRitualAttbutton" value="@{setmods}" />
         						    <input type="hidden" name="attr_LinkedRitualAttformula" value="@{ModSum}[Distracted, Wounds, Fatigue]" />
@@ -5354,11 +5375,11 @@
         						<div class='sheet-basetrait sheet-traitmodplus'>
         						    <span class="sheet-ModDesc" data-i18n="linked-attribute">Linked Attribute</span>
         						    <select class="sheet-LinkedAttSelect" name="attr_LinkedSpellcastingAtt">
-        						        <option value="(AGL)" data-i18n="agility">Agility</option>
-    									<option value="(SMA)" selected data-i18n="smarts">Smarts</option>
-    									<option value="(SPI)" data-i18n="spirit">Spirit</option>
-    									<option value="(STR)" data-i18n="strength">Strength</option>
-    									<option value="(VIG)" data-i18n="vigor">Vigor</option>
+        						        <option value="agl-u" data-i18n="agility">Agility</option>
+    									<option value="sma-u" selected data-i18n="smarts">Smarts</option>
+    									<option value="spi-u" data-i18n="spirit">Spirit</option>
+    									<option value="str-u" data-i18n="strength">Strength</option>
+    									<option value="vig-u" data-i18n="vigor">Vigor</option>
         						    </select>
         						    <input type='hidden' name='attr_LinkedSpellcastingAttbutton' value="@{setmods}" />
         						    <input type='hidden' name='attr_LinkedSpellcastingAttformula' value="@{ModSum}[Distracted, Wounds, Fatigue]" />
@@ -5748,11 +5769,11 @@
         						<div class='sheet-basetrait sheet-traitmodplus'>
         						    <span class="sheet-ModDesc" data-i18n="linked-attribute">Linked Attribute</span>
         						    <select class="sheet-LinkedAttSelect" name="attr_linkedweirdscienceatt">
-        						        <option value="(AGL)" data-i18n="agility">Agility</option>
-    									<option value="(SMA)" selected data-i18n="smarts">Smarts</option>
-    									<option value="(SPI)" data-i18n="spirit">Spirit</option>
-    									<option value="(STR)" data-i18n="strength">Strength</option>
-    									<option value="(VIG)" data-i18n="vigor">Vigor</option>
+        						        <option value="agl-u" data-i18n="agility">Agility</option>
+    									<option value="sma-u" selected data-i18n="smarts">Smarts</option>
+    									<option value="spi-u" data-i18n="spirit">Spirit</option>
+    									<option value="str-u" data-i18n="strength">Strength</option>
+    									<option value="vig-u" data-i18n="vigor">Vigor</option>
         						    </select>
         						    <input type='hidden' name='attr_linkedweirdscienceattbutton' value='@{setmods}' />
         						    <input type='hidden' name='attr_linkedweirdscienceattformula' value='@{ModSum}[Distracted, Wounds, Fatigue]' />
@@ -5819,11 +5840,11 @@
         						            <span class='sheet-ModDesc' data-i18n="apply-encumbrance">Apply Encumbrance</span></label><br />-->
                 						    <span class="sheet-ModDesc" data-i18n="linked-attribute">Linked Attribute</span>
                 						    <select class="sheet-LinkedAttSelect" name="attr_linkedotherattscore"> <!-- Sets the attribute to be used above in the linkedAtt div-->
-                						        <option value="(AGL)" data-i18n="agility">Agility</option>
-            									<option value="(SMA)" selected data-i18n="smarts">Smarts</option>
-            									<option value="(SPI)" data-i18n="spirit">Spirit</option>
-            									<option value="(STR)" data-i18n="strength">Strength</option>
-            									<option value="(VIG)" data-i18n="vigor">Vigor</option>
+                						        <option value="agl-u" data-i18n="agility">Agility</option>
+            									<option value="sma-u" selected data-i18n="smarts">Smarts</option>
+            									<option value="spi-u" data-i18n="spirit">Spirit</option>
+            									<option value="str-u" data-i18n="strength">Strength</option>
+            									<option value="vig-u" data-i18n="vigor">Vigor</option>
                 						    </select>
                 						    <input type='hidden' name='attr_linkedotherattscorebutton' value='@{setmods}' />
                 						    <input type='hidden' name='attr_linkedotherattscoreformula' value='@{ModSum}[Distracted, Wounds, Fatigue]' />
