--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -802,9 +802,13 @@
 		console.log("<===== Begin Sheet Upgrade Conversion Process =====>");
 		console.log("Sheet Version: " + v.character_sheet.slice(22));
 		const version = parseFloat(v.character_sheet.slice(22)) || 0;
+		console.log(version);
 		const versionone = parseInt(v.character_sheet.slice(22)) || 0;
-		const versiontwo = parseInt(v.character_sheet.slice(24)) || 0;;
+		console.log(versionone);
+		const versiontwo = parseInt(v.character_sheet.slice(24)) || 0;
+		console.log(versiontwo);
 		const versionthree = parseInt(v.character_sheet.slice(27)) || 0;
+		console.log(versionthree);
 		upgradeSheet(version, versionone, versiontwo, versionthree);
 		});
 	});
