Exists but not prescribing value
Bug fixxx?

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1,4 +1,4 @@
-<!-- <input type='hidden' name='attr_character_sheet' value='Savage Worlds Tabbed v4.00.01' /> -->
+<input type='hidden' name='attr_character_sheet'/>
 <script type="text/worker">
 	// Sheet managed at https://trello.com/b/yJHOPR22/swade-tabbed-roll20-sheet and the Roll20 QA test game
 	
