Hopefully cleaning up
Since i already have the versioning earlier

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -757,7 +757,7 @@
 				acStat = v.academics;
 				acSkill = v.academicsskill
 				setattrs({
-					character_sheet: "Savage Worlds Tabbed v4.00.01",
+					character_sheet: concat(sheetVersionPrefix, sheetVersion),
 					commonknowledgename: v['common-knowledgename'],
 					linkedathleticsatt: translateAttScore(v.linkedathleticsatt),
 					linkedpsionicsatt: translateAttScore(v.linkedpsionicsatt),
